make tooltip better - timestamp added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <!--&lt;!&ndash;version: {{db_items.versionnumber}}&ndash;&gt;-->
                 <!--&lt;!&ndash;date: {{db_items._created_on | date:'MM/dd/yyyy'}}&ndash;&gt;-->
                 <!--size: xxx,-->
-                <!--size: {{hockey_vs_pairs}}-->
+                size: {{hockey_vt_pairs}}
             <!--</li>-->
 
         </div>
