--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./lib/angular-1.3.16/angular.js"></script>
     <script src="./lib/angular-1.3.16/angular-route.js"></script>
     <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
+    <script src="./lib/Underscore.js"></script>
     <!--<script src="./lib/httpMongoDB.js"></script>-->
     <script src="./lib/highcharts-ng.js"></script>
     <script src="./lib/highcharts-app.js"></script>
@@ -85,7 +86,7 @@
                 <!--&lt;!&ndash;size: {{db_items.appsizeondisc | bytes}}&ndash;&gt;-->
                 <!--&lt;!&ndash;version: {{db_items.versionnumber}}&ndash;&gt;-->
                 <!--&lt;!&ndash;date: {{db_items._created_on | date:'MM/dd/yyyy'}}&ndash;&gt;-->
-                <!--size: xxx,-->
+                <!--underScoreTest: {{hockey_vs_pairs}}-->
             <!--</li>-->
 
         </div>
