convert unix timestamp to human readable time

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 <!--underScoreTest: {{hockey_vs_pairs}}-->
             <!--</li>-->
 
+            <!--fomattedTime: {{v_time_value_pairs}}-->
         </div>
 
     </div>
