--- a/index.html
+++ b/index.html
@@ -9,32 +9,25 @@
     <script src="./lib/angular-1.3.16/angular-route.js"></script>
     <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
     <script src="./lib/Underscore.js"></script>
-    <!--<script src="./lib/httpMongoDB.js"></script>-->
     <script src="./lib/highcharts-ng.js"></script>
     <script src="./lib/highcharts-app.js"></script>
 
+    <style type='text/css'>
+        .highcharts-tooltip>span {
+            background: rgba(255,255,255,0.85);
+        }
+
+    </style>
+
 </head>
+
+
 <body>
-
-<!--<mark> <h2>SWAT Installer Size</h2> </mark>-->
-
-
 <div ng-app="myapp" class="container">
 
     <h3 class="events text-center" >SWAT Installer Sizes</h3>
 
-    <!--<hr style="width: 100%; color: black; height: 10px; background-color:gainsboro;" />-->
-
     <div class="list-group" ng-controller="httpQueryAppControler1">
-        <!--<ul>-->
-            <!--<li class="list-group-item" ng-repeat="db_items in hockey_db_data">-->
-                <!--size: {{db_items.appsizeondisc | bytes}}-->
-                <!--version: {{db_items.versionnumber}}-->
-                <!--date: {{db_items._created_on | date:'MM/dd/yyyy'}}-->
-            <!--</li>-->
-        <!--</ul>-->
-        <!--<p> data: {{hockey_db_data}}</p>-->
-        <!--<p> VERSIONS: {{hockey_versions}}</p>-->
     </div>
 
 
@@ -53,16 +46,6 @@
                 </div>
             </div>
 
-            <!--<button ng-click="addPoints()">Add New Points</button>-->
-            <!--<button ng-click="addSeries()">Add New Series</button>-->
-
-            <!--<li class="list-group-item" ng-repeat="db_items in hockey_build_sizes">-->
-            <!--&lt;!&ndash;size: {{db_items.appsizeondisc | bytes}}&ndash;&gt;-->
-            <!--&lt;!&ndash;version: {{db_items.versionnumber}}&ndash;&gt;-->
-            <!--&lt;!&ndash;date: {{db_items._created_on | date:'MM/dd/yyyy'}}&ndash;&gt;-->
-            <!--size: xxx,-->
-            <!--</li>-->
-
         </div>
     </div>
 
@@ -79,24 +62,9 @@
                 </div>
             </div>
 
-            <!--<button ng-click="addPoints()">Add New Points</button>-->
-            <!--<button ng-click="addSeries()">Add New Series</button>-->
-
-            <!--<li class="list-group-item" ng-repeat="db_items in hockey_build_sizes">-->
-                <!--&lt;!&ndash;size: {{db_items.appsizeondisc | bytes}}&ndash;&gt;-->
-                <!--&lt;!&ndash;version: {{db_items.versionnumber}}&ndash;&gt;-->
-                <!--&lt;!&ndash;date: {{db_items._created_on | date:'MM/dd/yyyy'}}&ndash;&gt;-->
-                <!--underScoreTest: {{hockey_vs_pairs}}-->
-            <!--</li>-->
-
-            <!--fomattedTime: {{v_time_value_pairs}}-->
         </div>
 
     </div>
-
-    <!--<hr style="width: 100%; color: black; height: 10px; background-color:gainsboro;" />-->
-
-
 </div>
 
 </body>
