update the jenkins URL on chart tooltip

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <style type='text/css'>
         .highcharts-tooltip>span {
             background: rgba(255,255,255,0.85);
+            text-align: right;
         }
 
     </style>
