change time to PM AM

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                 </div>
             </div>
         </div>
+
+        time1: {{fomattedTime1}}
+        time2: {{fomattedTime12}}
     </div>
 </div>
 
