--- a/index.html
+++ b/index.html
@@ -1,21 +1,29 @@
 
 <!doctype html>
-    <script src="./lib/jquery-1.11.3.js"></script>
-    <script src="./lib/bootstrap-3.3.4-dist/js/bootstrap.js"></script>
-    <link rel="stylesheet" type="text/css" href="./lib/bootstrap-3.3.4-dist/css/bootstrap.css">
-    <script src="./lib/angular-1.3.16/angular.js"></script>
-    <script src="./lib/angular-1.3.16/angular-route.js"></script>
-    <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
-    <script src="./lib/Underscore.js"></script>
-    <script src="./lib/highcharts-ng.js"></script>
-    <script src="./lib/highcharts-app.js"></script>
-    <style type='text/css'>
-        .highcharts-tooltip>span {
-            background: rgba(255,255,255,0.85);
-            text-align: right;
-        }
+<script src="./lib/jquery-1.11.3.js"></script>
+<script src="./lib/bootstrap-3.3.4-dist/js/bootstrap.js"></script>
+<link rel="stylesheet" type="text/css" href="./lib/bootstrap-3.3.4-dist/css/bootstrap.css">
+<script src="./lib/angular-1.3.16/angular.js"></script>
+<script src="./lib/angular-1.3.16/angular-route.js"></script>
+<script src="http://code.highcharts.com/stock/highstock.src.js"></script>
+<script src="./lib/Underscore.js"></script>
+<script src="./lib/highcharts-ng.js"></script>
+<script src="./lib/highcharts-app.js"></script>
 
-    </style>
+<!-- Additional files for the Highslide popup effect -->
+<script type="text/javascript" src="http://www.highcharts.com/media/com_demo/highslide-full.min.js"></script>
+<script type="text/javascript" src="http://www.highcharts.com/media/com_demo/highslide.config.js" charset="utf-8"></script>
+<link rel="stylesheet" type="text/css" href="http://www.highcharts.com/media/com_demo/highslide.css" />
+
+<style type='text/css'>
+    .highcharts-tooltip>span {
+        background: rgba(255,255,255,0.15);
+        /*width: 1000px;*/
+
+        /*text-align: right;*/
+    }
+
+</style>
 
 </head>
 
@@ -43,27 +51,26 @@
                     <highchart id="chart2" config="chartConfig" class="span9" ></highchart>
                 </div>
             </div>
-
         </div>
     </div>
 
-    <div ng-controller="mySwatAndroidBuildChart">
-        <div>
-            <img src="./icons/android.png" alt="Mountain View" style="width:50px;height:50px;">
-        </div>
+    <!--<div ng-controller="mySwatAndroidBuildChart">-->
+    <!--<div>-->
+    <!--<img src="./icons/android.png" alt="Mountain View" style="width:50px;height:50px;">-->
+    <!--</div>-->
 
-        <div class="row">
-            <!-- chart area -->
-            <div class="row">
-                <div class="row">
-                    <highchart id="chart1" config="chartConfig" class="span9" ></highchart>
-                </div>
-            </div>
-        </div>
+    <!--<div class="row">-->
+    <!--&lt;!&ndash; chart area &ndash;&gt;-->
+    <!--<div class="row">-->
+    <!--<div class="row">-->
+    <!--<highchart id="chart1" config="chartConfig" class="span9" ></highchart>-->
+    <!--</div>-->
+    <!--</div>-->
+    <!--</div>-->
 
-        time1: {{fomattedTime1}}
-        time2: {{fomattedTime12}}
-    </div>
+    <!--time1: {{fomattedTime1}}-->
+
+    <!--</div>-->
 </div>
 
 </body>
