--- a/index.html
+++ b/index.html
@@ -30,19 +30,13 @@
 <body>
 <div ng-app="myapp" class="container">
 
-    <h3 class="events text-center" >SWAT Installer Sizes</h3>
+    <h3 class="events text-center" >SWAT</h3>
 
     <div class="list-group" ng-controller="httpQueryAppControler1">
     </div>
 
 
     <div ng-controller="mySwatIOSBuildChart">
-
-        <div>
-            <img src="./icons/ios.png" alt="Mountain View" style="width:50px;height:50px;">
-        </div>
-
-
         <div class="row">
             <!-- chart area -->
             <div class="row">
