update css, make chart color better

--- a/index.html
+++ b/index.html
@@ -47,23 +47,20 @@
         </div>
     </div>
 
-    <!--<div ng-controller="mySwatAndroidBuildChart">-->
-    <!--<div>-->
-    <!--<img src="./icons/android.png" alt="Mountain View" style="width:50px;height:50px;">-->
-    <!--</div>-->
 
-    <!--<div class="row">-->
-    <!--&lt;!&ndash; chart area &ndash;&gt;-->
-    <!--<div class="row">-->
-    <!--<div class="row">-->
-    <!--<highchart id="chart1" config="chartConfig" class="span9" ></highchart>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
+    <div ng-controller="mySwatAndroidBuildChart">
+        <div class="row">
+            <!-- chart area -->
+            <div class="row">
+                <div class="row">
+                    <highchart id="chart2" config="chartConfig" class="span9" ></highchart>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <!--time1: {{fomattedTime1}}-->
 
-    <!--</div>-->
+
 </div>
 
 </body>
