--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 <div ng-app="myapp" class="container">
 
-    <h3 class="events text-center" >SWAT</h3>
+    <h3 class="events text-center" >SWAT - Adhoc Builds Size Chart</h3>
 
     <div class="list-group" ng-controller="httpQueryAppControler1">
     </div>
