--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!doctype html>
-<script src="./lib/jquery-1.11.3.js"></script>
+<script src="./lib/jquery-1.11.3.js" xmlns="http://www.w3.org/1999/html"></script>
 <script src="./lib/bootstrap-3.3.4-dist/js/bootstrap.js"></script>
 <link rel="stylesheet" type="text/css" href="./lib/bootstrap-3.3.4-dist/css/bootstrap.css">
 <script src="./lib/angular-1.3.16/angular.js"></script>
@@ -32,8 +32,6 @@
 
     <h3 class="events text-center" >SWAT - Adhoc Builds Size/Changes Chart</h3>
 
-    <div class="list-group" ng-controller="httpQueryAppControler1">
-    </div>
 
 
     <div ng-controller="mySwatIOSBuildChart">
@@ -46,6 +44,7 @@
             </div>
         </div>
     </div>
+
 
     <div ng-controller="mySwatAndroidBuildChart">
         <div class="row">
