--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 
 <!doctype html>
-<script src="./lib/jquery-1.11.3.js" xmlns="http://www.w3.org/1999/html"></script>
-<script src="./lib/bootstrap-3.3.4-dist/js/bootstrap.js"></script>
-<link rel="stylesheet" type="text/css" href="./lib/bootstrap-3.3.4-dist/css/bootstrap.css">
-<script src="./lib/angular-1.3.16/angular.js"></script>
-<script src="./lib/angular-1.3.16/angular-route.js"></script>
+<script src="http://code.jquery.com/jquery-2.1.4.min.js" xmlns="http://www.w3.org/1999/html"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+<!--<script src="./lib/angular-1.3.16/angular-route.js"></script>-->
 <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
-<script src="./lib/Underscore.js"></script>
+<script src="http://underscorejs.org/underscore-min.js"></script>
+
 <script src="./lib/highcharts-ng.js"></script>
 <script src="./lib/highcharts-app.js"></script>
 
