update js reference address

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 <script src="http://code.highcharts.com/stock/highstock.src.js"></script>
 <script src="http://underscorejs.org/underscore-min.js"></script>
 
-<script src="./lib/highcharts-ng.js"></script>
-<script src="./lib/highcharts-app.js"></script>
+<script src="http://10.151.0.186:8082/buildSizeChart/lib/highcharts-app.js"></script>
+<script src="http://10.151.0.186:8082/buildSizeChart/lib/highcharts-ng.js"></script>
 
-<!-- Additional files for the Highslide popup effect -->
 <script type="text/javascript" src="http://www.highcharts.com/media/com_demo/highslide-full.min.js"></script>
 <script type="text/javascript" src="http://www.highcharts.com/media/com_demo/highslide.config.js" charset="utf-8"></script>
 <link rel="stylesheet" type="text/css" href="http://www.highcharts.com/media/com_demo/highslide.css" />
