--- a/BatteryCurrent.html
+++ b/BatteryCurrent.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
 <!--<script src="./lib/angular-1.3.16/angular-route.js"></script>-->
-<script src="http://code.highcharts.com/stock/highstock.src.js"></script>
+<script src="http://code.highcharts.com/highcharts.js"></script>
 <script src="http://underscorejs.org/underscore-min.js"></script>
 
 <!-- <script src="http://10.151.0.186:8082/buildSizeChart/lib/highcharts-app.js"></script> -->
